tests/samples/negative/types/reference_return_block_local.ax
module reference_return_block_local;

fn bad() -> &i32 {
    let value: i32 = 1;
    return { &value };
}

fn main() -> i32 {
    return 0;
}
